--- a/src/contact.html
+++ b/src/contact.html
@@ -7,52 +7,77 @@ title: Contact
     <div class="row">
       <div class="col-12">
         <div class="content editable">
-          <p class="lead">What is Ocupop? We’re not entirely sure honestly... Are we Creatives? Graphic designers? Web designers? Maybe web developers? Commercial artists? Trend-spotters? Branding experts? Fashionistas? Computer nerds – Definitely.</p>
-          <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no account executives, no receptionists, no bagels or coffee. The coolest Ocupop Office Funzone® around and the best people in the world.</p>
+          <h1>What we're like to work with</h1>
+          <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no
+            account executives, no receptionists, no bagels or coffee. The coolest Ocupop Office Funzone® around and the best
+            people in the world.</p>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
-        <div class="content">
-          <img src="" class="img-fluid" alt="">
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="bg-image aspect-16x9" style="background-image: url({{ site.placeholders.hero }})"></section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
-        <div class="content editable">
-          <h1>What is it like to work with us?</h1>
-          <p>We are, simply speaking, a small shop, with all of the benefits and pit-falls therein. You see what you get; no account executives, no receptionists, no bagels or coffee. The coolest <strong>Ocupop Office Funzone®</strong> around and the best people in the world.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<section class="bg-dark text-white">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="content editable">
-          <h1>Send us a Heyder</h1>
-          <p>Ocupop is perpetually pushing the limits of technology, testing and tweaking at the leading edge of what’s possible in a browser. This Joke Station 3000 Webform® feeds an artifically intelligent system painstakingly adapted over time to identify only the most hillarious funnies. See if you can make our robot laugh— he love puns.</p>
-        </div>
-    </div>
-  </div>
-</section>
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col">
+      <div class="col-12 col-lg-10 mx-lg-auto">
         <div class="content">
           <div class="cognito">
             <script src="https://services.cognitoforms.com/s/bbN8iw1MJUqjPe6aHn-_rw"></script>
             <script>Cognito.load("forms", { id: "25" });</script>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section id="joke-station" class="py-0">
+  <div class="row no-gutters">
+    <div class="col-lg-6">
+      <div class="bg-image aspect-5x7" style="background-image:url({{ site.placeholders.aspect-4x3}})"></div>
+    </div>
+    <div class="col-lg-6 bg-dark text-white pt-5">
+      <div class="content">
+        <h3>Make Us Laugh</h3>
+        <p>Ocupop is perpetually pushing the limits of technology, testing and tweaking at the leading edge of what's
+          possible in a browser. This is Joke Station 3000 Webform&reg; feeds an artificially intelligent system
+          painstakingly adapted over time to identify only the most hilarious funnies. See if you can make our robot
+          laugh&mdash; he love puns.</p>
+        <a href="#" class="btn btn-outline-light">Tell a Joke</a>
+      </div>
+      <div class="content">
+        <h3>Make your Friends Laugh</h3>
+        <p>Friends don't find you funny enough? We're here to help. Share on of Ocupop's quality assured jokes to your social
+          feed and watch how popular you get.</p>
+        <p>
+          <a href="#">
+            <i class="icon icon-instagram"></i>
+          </a>
+          <a href="#">
+            <i class="icon icon-facebook"></i>
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="content">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+            </div>
+            <div class="col-md-6">
+              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+            </div>
+          </div>
+          <div class="row mt-5">
+            <div class="col-md-4">
+              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+            </div>
+            <div class="col-md-4">
+              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-1x1 }})"></div>
+            </div>
           </div>
         </div>
       </div>
