--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,6 @@ title: Home
       <div class="col-12">
         <div class="content editable">
           <p class="quote">"I have never felt more alive!"</p>
-          <p class="quote-author">
-            <strong>Bert Appward</strong><br />Fortune 100 Company
-          </p>
         </div>
       </div>
     </div>
@@ -40,83 +37,36 @@ title: Home
   </div>
 </section>
 <section class="pt-0">
-  <div class="container">
-    <div id="photo-grid" class="row">
-      <div class="col">
-        <div class="content">
-          <div class="row">
-            <div class="col-md-8">
-              <a
-                class="expand-full-screen"
-                data-image="/assets/img/home/ocupop-workgrid-01.jpg"
-                data-transition="ProjectTransition"
-                href="/work/google-developer-days/">
-                <div 
-                  class="bg-image aspect-1x1 mt-md-0 mt-5"
-                  style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)">
-                </div>
-              </a>
-            </div>
-            <div class="col-md-4">
-              <div class="d-flex h-100 flex-column justify-content-between">
-                  <a
-                  class="expand-full-screen"
-                  data-image="/assets/img/home/ocupop-workgrid-02.jpg"
-                  data-transition="ProjectTransition"
-                  href="/work/first-launch/">
-                    <div
-                      class="bg-image aspect-1x1 mt-md-0 mt-5"
-                      style="background-image: url(/assets/img/home/ocupop-workgrid-02.jpg)">
-                    </div>
-                  </a>
-                  <a
-                    class="expand-full-screen"
-                    data-image="/assets/img/home/ocupop-workgrid-03.jpg"
-                    data-transition="ProjectTransition"
-                    href="/work/burton-learn-to-ride/">
-                    <div 
-                     class="bg-image aspect-1x1 mt-md-0 mt-5"
-                     style="background-image: url(/assets/img/home/ocupop-workgrid-03.jpg)">
-                    </div>
-                  </a>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-md-6">
-              <a
-                class="expand-full-screen"
-                data-image="/assets/img/home/ocupop-workgrid-04.jpg"
-                data-transition="ProjectTransition"
-                href="/work/mapbox-locate/">
-                <div
-                  class="bg-image aspect-4x3 mt-md-0 mt-5"
-                  style="background-image: url(/assets/img/home/ocupop-workgrid-04.jpg)">
-                </div>
-              </a>
-            </div>
-            <div class="col-md-6">
-              <a 
-                class="expand-full-screen"
-                data-image="/assets/img/home/ocupop-workgrid-05.jpg" 
-                data-transition="ProjectTransition" 
-                href="/work/bittercube/">
-                <div
-                  class="bg-image aspect-4x3 mt-md-0 mt-5"
-                  style="background-image: url(/assets/img/home/ocupop-workgrid-05.jpg)">
-                </div>
-              </a>
-            </div>
-          </div>
+  <div id="photo-grid" class="row no-gutters">
+    <div class="col-12">
+      <a class="expand-full-screen" data-image="/assets/img/home/ocupop-workgrid-01.jpg" data-transition="ProjectTransition"
+        href="/work/google-developer-days/">
+        <div class="bg-image aspect-16x9 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-01.jpg)">
         </div>
-      </div>
+      </a>
+    </div>
+  </div>
+  <div class="row no-gutters">
+    <div class="col-lg-6">
+      <a class="expand-full-screen" data-image="/assets/img/home/ocupop-workgrid-04.jpg" data-transition="ProjectTransition"
+        href="/work/mapbox-locate/">
+        <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/home/ocupop-workgrid-04.jpg)">
+        </div>
+      </a>
+    </div>
+    <div class="col-lg-6">
+      <a class="expand-full-screen" data-image="/assets/img/home/ocupop-workgrid-04.jpg" data-transition="ProjectTransition"
+        href="/work/kunoa/">
+        <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url({{ site.placeholders.aspect-4x3 }})">
+        </div>
+      </a>
     </div>
   </div>
 </section>
 
-<section class="bg-dark text-white">
+<section>
   <div class="container">
-    <div class="row align-items-center">
+    <div class="row">
       <div class="col-md-6">
         <div class="content editable">
           <p class="quote">
@@ -137,12 +87,13 @@ title: Home
             clients to choose between multiple partially thought out options and
             instead work collaboratively toward one reasoned, powerful solution.
           </p>
+          <a href="/focus" class="btn btn-outline-dark">What we do</a>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section class="bg-orange text-white">
+<!-- <section class="bg-orange text-white">
   <div class="container">
     <div class="row">
       <div class="col-12">
@@ -152,37 +103,9 @@ title: Home
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
-<section>
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="content editable">
-          <p class="quote">
-            ..we do good work for good people and they make referrals. For 20
-            years!”
-          </p>
-          <p class="quote-author">
-            <strong>Michael Nieling</strong><br />Founder and Creative Director
-          </p>
-        </div>
-        <div class="content editable">
-          <p>
-            No cheesy sale-sters in EXPRESS shiny shirts, no account planners,
-            no middle men, and none of the overhead that goes along with ‘em! We
-            interface directly with decision makers and fanatically pursue
-            perfection in planning, execution, and implementation. Projects are
-            completed quickly and e ciently, and with refreshing candor and
-            commitment...always aspiring to the ideal that we work WITH you, not
-            for you.
-          </p>
-          <a href="#" class="btn btn-inline">Learn More...</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 <section class="bg-dark text-white">
   <div class="container">
     <div class="row align-items-center">
@@ -209,7 +132,7 @@ title: Home
             the most influential logos, icons, campaigns and user interfaces on
             the web and beyond.
           </p>
-          <a href="#" class="btn btn-inline">Learn More</a>
+          <a href="/contact" class="btn btn-outline-light">Let's Talk</a>
         </div>
       </div>
     </div>
@@ -217,58 +140,38 @@ title: Home
       <div class="col-12">
         <div class="content">
           <div class="logo-pile">
-            <img
-              src="/assets/img/home/logopile-google.png"
-              alt="Google Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-w3c.png"
-              alt="W3C Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-harvardbusinessreview.png"
-              alt="Harvard Business Review Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-sxsw.png"
-              alt="South by SouthWest Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-facebook.png"
-              alt="Facebook Logo"
-              class="img-fluid"
-            />
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-google.png" alt="Google Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-w3c.png" alt="W3C Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-harvardbusinessreview.png" alt="Harvard Business Review Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-sxsw.png" alt="South by SouthWest Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-facebook.png" alt="Facebook Logo" class="img-fluid" />
+            </div>
           </div>
           <div class="logo-pile">
-            <img
-              src="/assets/img/home/logopile-frontline.png"
-              alt="Frontline Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-pbs.png"
-              alt="PBS Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-burton.png"
-              alt="Burton Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-mozilla.png"
-              alt="Mozilla Logo"
-              class="img-fluid"
-            />
-            <img
-              src="/assets/img/home/logopile-internetsociety.png"
-              alt="Internet Society Logo"
-              class="img-fluid"
-            />
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-frontline.png" alt="Frontline Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-pbs.png" alt="PBS Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-burton.png" alt="Burton Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-mozilla.png" alt="Mozilla Logo" class="img-fluid" />
+            </div>
+            <div class="logo-item">
+              <img src="/assets/img/home/logopile-internetsociety.png" alt="Internet Society Logo" class="img-fluid" />
+            </div>
           </div>
         </div>
       </div>
@@ -278,12 +181,16 @@ title: Home
 <section>
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col-lg-6">
         <div class="content editable">
           <p class="quote">“We are DEZIGNING! Ocupop rulez SUPREME!”</p>
           <p class="quote-author">
             <strong>Jon Burr</strong><br />Ocupop Web Developer, Canadian
           </p>
+        </div>
+      </div>
+      <div class="col-lg-6">
+        <div class="content editable">
           <p>
             Infamous international Vision Quests, dance parties, and spirited
             creative debate, Tom Collinses, skateboard ramps, and world class
@@ -292,10 +199,14 @@ title: Home
             World’s Greatest DesignsquadTM, so drop a joke in the joke station
             and let’s see if you’ve got what it takes!
           </p>
-          <a href="#" class="btn btn-inline">Learn More</a>
+          <a href="#" class="btn btn-outline-dark">About Us</a>
         </div>
       </div>
     </div>
+  </div>
+</section>
+<section>
+  <div class="container">
     <div class="row">
       <div class="col">
         <div class="content">
