project updates, team member layout

--- a/src/_projects/mapbox-locate.html
+++ b/src/_projects/mapbox-locate.html
@@ -22,9 +22,78 @@ tags:
     <div class="row">
       <div class="col-12">
         <div class="content editable">
+          <p class="lead">
+            Donkey cars, self driving pizza delivery, and lenticular billboards&mdash; Mapbox Locate was about as close as you can get to navigating into the future.
+          </p>
           <p>Mapbox leverages the largest, most intelligent open source location platform in the world to power many of the apps we use every day. Facebook, Snapcat, Uber, Vice, Bloomberg, and Ocupop all tap into a remarkably adaptable toolset informed by 350 million miles of live road telemetry data fed into it every day.</p>
-          <p>Mapbox recently asked Ocupop to help concept their inaugural user conference at Pier 27 in San Francisco. With the ’Locate’ name already in place, Mapbox needed an entirely new message strategy, branding package, and experience design to ensure the event was well received, and even better attended, by the world’s mapping elite.</p>
-          <p>Working on a tight timeline and at a remarkable scale, Ocupop designed the ‘Locate’ visual system to celebrate Mapbox’s authentic position at the leading edge of location data and the passionate community that joins them there. </p>
+          <!-- <p>Mapbox recently asked Ocupop to help concept their inaugural user conference at Pier 27 in San Francisco. With the ’Locate’ name already in place, Mapbox needed an entirely new message strategy, branding package, and experience design to ensure the event was well received, and even better attended, by the world’s mapping elite.</p>
+          <p>Working on a tight timeline and at a remarkable scale, Ocupop designed the ‘Locate’ visual system to celebrate Mapbox’s authentic position at the leading edge of location data and the passionate community that joins them there. </p> -->
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 col-md-10 mx-md-auto">
+        <div class="content">
+          <p class="lead">
+            Working on a tight timeline and a remarkable scale, Ocupop designed the 'Locate' visual system to celebrate Mapbox's authentic position at the leading edge of location data and the passionate community that joins them there.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="pt-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image: url({{ site.placeholders.aspect-4x3 }})"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12">
+        <div class="content">
+          <img src="https://via.placeholder.com/1200x600?text=Website+showcase" class="img-fluid" alt="">
         </div>
       </div>
     </div>
