--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -6,7 +6,7 @@ status: active
 summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.'
 completion_date: 2013-08-01 00:00:00
 featured_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
-hero_image: /assets/img/projects/burtonltr-project/burtonltr-hero.jpg
+hero_image: /assets/img/projects/burtonltr-project/burtonltr-feature.jpg
 gallery:
   - image:
     caption:
@@ -50,49 +50,42 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-01.jpg)"></div>
-<section class="bg-dark text-white">
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-hero.jpg)"></div>
+<section>
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 col-md-10 mx-md-auto">
         <div class="content">
-          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
-          <p class="lead mt-5">Which run will you take? No matter whether it’s the chutes and steeps or the bunny hill — Learn to Ride is down to take some laps.</p>
+          <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam dicta quod consequatur tempore hic, obcaecati totam repellendus laudantium eius soluta quidem exercitationem quibusdam? Quis corporis similique in alias placeat at?</p>
         </div>
       </div>
     </div>
   </div>
 </section>
-<section>
+<section class="pt-0">
   <div class="container">
     <div class="row">
-      <div class="col">
-        <div class="content">
-          <div class="row">
-            <div class="col-md-4">
-              <div class="d-flex h-100 flex-column justify-content-between">
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
-              </div>
-            </div>
-            <div class="col-md-8">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
       <div class="col-12">
         <div class="content">
-          <p>Learn to Ride isn’t just kids and beginners— every element of the initiative (and the brand) is designed to encourage and enable improvement at all levels of riding. To this end, Ocupop also established the augmented brand of Burton Learn To Ride+ for more advanced programs, products, and places.</p>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-02.jpg)"></div>
         </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-12">
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-04.jpg)"></div>
+        </div>
         <div class="content">
           <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-06.jpg)"></div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-03.jpg)"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/burtonltr-project/burtonltr-project-05.jpg)"></div>
         </div>
       </div>
     </div>
