--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -6,7 +6,7 @@ status: active
 summary: 'A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.'
 completion_date:
 featured_image: /assets/img/projects/gdd-project/gdd-feature-01.jpg
-hero_image: /assets/img/projects/gdd-project/gdd-hero.jpg
+hero_image: /assets/img/projects/gdd-project/gdd-feature-01.jpg
 gallery:
   - image:
     caption:
@@ -28,62 +28,46 @@ tags:
     </div>
   </div>
 </section>
-<div class="bg-image aspect-hero" style="background-image: url({{ site.placeholders.hero }})"></div>
+<div class="bg-image aspect-hero" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-03.jpg)"></div>
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 col-md-10 mx-md-auto">
         <div class="content">
-          <div class="row">
-            <div class="col-12">
-              <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd/gdd-project-02.jpg)"></div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-12">
-              <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-03.jpg)"></div>
-            </div>
-          </div>
-          <div class="row mt-3">
-            <div class="col-md-6">
-              <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-04.jpg)"></div>
-            </div>
-            <div class="col-md-6">
-              <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-05.jpg)"></div>
-            </div>
-          </div>
+          <p class="lead">
+            Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing experience for attendees and Googlers alike.
+          </p>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-12">
         <div class="content">
-          <p class="lead">Inspired by simple building blocks, Ocupop designed an extensible aesthetic that reinforces collaborative development and celebrates the diversity of the host countries. Sweeping IMAX-sized animations, King Kong scale selfie frames, stage-side villages, and branded beverages all combined to create a vibrant, energizing experience for attendees and Googlers alike.</p>
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-02.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-05.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-09.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-07.jpg)"></div>
+        </div>
+        <div class="content">
+          <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-06.jpg)"></div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-12">
+    <div class="row mt-3">
+      <div class="col-md-6">
         <div class="content">
-          <div class="row">
-            <div class="col-md-8">
-              <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-06.jpg)"></div>
-            </div>
-            <div class="col-md-4">
-              <div class="d-flex h-100 flex-column justify-content-between">
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-07.jpg)"></div>
-                <div class="bg-image aspect-1x1 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-08.jpg)"></div>
-              </div>
-            </div>
-          </div>
-          <div class="row mt-4">
-            <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-09.jpg)"></div>
-            </div>
-            <div class="col-md-6">
-              <div class="bg-image aspect-4x3 mt-md-0 mt-5" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-10.jpg)"></div>
-            </div>
-          </div>
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-10.jpg)"></div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="content">
+          <div class="bg-image aspect-1x1" style="background-image: url(/assets/img/projects/gdd-project/gdd-project-08.jpg)"></div>
         </div>
       </div>
     </div>
