cookie handling, about page, contact page, projects

--- a/src/_projects/bittercube.html
+++ b/src/_projects/bittercube.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: We all got LOGO TATTOOS! 
+quote: We all got LOGO TATTOOS! 
 client: Bittercube Bitters
 status: active
 summary: 'Bittercube needed to elevate their brand to match the quality and sophistication of their products, philosophy, and team. And once they saw the new logo, every one of ‘em had a new tattoo!'
