--- a/src/_projects/burton-learn-to-ride.html
+++ b/src/_projects/burton-learn-to-ride.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Learn to ride? More like learn to rip.
+quote: Learn to ride? More like learn to rip.
 client: Burton Snowboards
 status: active
 summary: 'Experience Snowboarding’ was a confusing galaxy of products and initiatives. With a ethereal aesthetic and an even more mysterious structure, the whole thing needed to get more down to earth.'
