--- a/src/_projects/first-launch.html
+++ b/src/_projects/first-launch.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Reaching for the stars
+quote: Reaching for the stars
 client: FIRST LAUNCH
 status: active
 summary: 'For 2019 Ocupop proposed developing a cohesive theme that would work across all four competitions—something that hadn’t been done in previous years.'
