--- a/src/_projects/google-developer-days.html
+++ b/src/_projects/google-developer-days.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: 'Europe, India, China: Developers for days...'
+quote: 'Europe, India, China: Developers for days...'
 client: Google
 status: active
 summary: 'A unique challenge: build a brand that resonates across three disparate cultures AND make sure each shares their own authentic slant on building a better web together.'
