--- a/src/_projects/html-5.html
+++ b/src/_projects/html-5.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: We need to design a logo for the internet.
+quote: We need to design a logo for the internet.
 client: HTML5 Logo for W3C
 status: active
 summary: 'We were honored to collaborate with the W3C and several prominent HTML advocates in creating the logo for HTML5.' 
