--- a/src/_projects/kunoa.html
+++ b/src/_projects/kunoa.html
@@ -1,6 +1,6 @@
 ---
 layout: project
-title: Take your beef to the beach!
+quote: Take your beef to the beach!
 client: Kunoa Cattle Company
 status: active
 summary: 'Passionately supporting Kunoa’s dedication to a sustainable future for Hawaii, Ocupop named the brand, designed the identity, and has served as agency of record since day one.'
