--- a/src/contact.html
+++ b/src/contact.html
@@ -27,8 +27,8 @@ title: Contact
 
 <section id="joke-station" class="py-0">
   <div class="row no-gutters">
-    <div class="col-lg-6">
-      <div class="bg-image aspect-5x7" style="background-image:url({{ site.placeholders.aspect-4x3}})"></div>
+    <div class="col-lg-6 bg-dark d-flex justify-content-end align-items-center">
+      <div class="bg-image aspect-5x7" style="background-image:url({{ site.placeholders.aspect-1x1 }})"></div>
     </div>
     <div class="col-lg-6 bg-dark text-white pt-5">
       <div class="content">
