--- a/src/work.html
+++ b/src/work.html
@@ -28,13 +28,13 @@ testimonial:
   <div id="projectList" class="row no-gutters">
     {% for project in site.projects %}
     {% if project.status == "active" %}
-    <div class="mix project-card col-lg-6 {% for tag in project.tags %} {{ tag }}{% endfor %}">
+    <div class="mix position-relative col-lg-6 {% for tag in project.tags %} {{ tag }}{% endfor %}">
       <a href="{{ project.url }}" class="expand-full-screen" data-transition="ProjectTransition" data-image="{{ project.featured_image }}">
         <div class="bg-image aspect-16x9" style="background-image: url({{ project.featured_image | default: site.placeholders.aspect-4x3 }})"></div>
         <div class="hover-overlay">
           <div class="overlay-content">
-            <p class="project-title">{{ project.title }}</p>
-            <p class="project-client">{{ project.client }}</p>
+            <p class="hover-primary-text">{{ project.quote }}</p>
+            <p class="hover-secondary-text">{{ project.client }}</p>
           </div>
         </div>
       </a>
