--- a/src/_projects/pbs.html
+++ b/src/_projects/pbs.html
@@ -1,7 +1,7 @@
 ---
 layout: project
 completion_date: 2018-05-30 00:00:00
-title: Need Project Title...
+quote: Need Project Quote...
 client: 'PBS'
 status: active
 summary: 
